--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -7,7 +7,7 @@
         <div class="col-10 offset-1" id="<%= locals.shopItem._id %>">
             <h3 class="single-title col-12"><%= locals.shopItem.title %>
                 <% if (locals.level && locals.level > 1) { %>
-                <a href="/Admin/Blog/Patch/<%= locals.shopItem._id %>"><i class="fas fa-edit"></i></a>
+                <a href="/Admin/Shop/Patch/<%= locals.shopItem._id %>"><i class="fas fa-edit"></i></a>
                 <% } %> 
             </h3>  
 
