--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -17,7 +17,7 @@
                         <% if (locals.img) { %>
                             <% locals.img.forEach(function (item, index) { %>
                                 <div class="carousel-item <% if(index == 0) { %>active<% } %>">
-                                    <a href="#expand"><img onclick="expand(this);" class="d-block w-100 carousel-img" src="http://localhost:8089/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
+                                    <a href="#expand"><img onclick="expand(this);" src="http://localhost:8089/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
                                     <div class="carousel-caption d-none d-md-block">
                                     </div>
                                 </div>
