revamped whole admin css

--- a/views/restricted/Admin.ejs
+++ b/views/restricted/Admin.ejs
@@ -1,11 +1,15 @@
 <% include ../partials/head %>
 
-<div class="container container-blog">
-    <a href="/Admin/Orders">Orders</a> - 
-    <a href="/Admin/Galerie/Post">Galerie</a> - 
-    <a href="/Admin/Shop/Post">Shop</a> - 
-    <a href="/Admin/Blog/Post">Blog</a> - 
-    <a href="/Admin/Front">Home page display</a>
+<div class="container container-single">
+    <div class="single-wrapper" style="padding: 200px 100px;">
+        <div class="row justify-content-center">
+            <a class="admin-section-block col-3" href="/Admin/Orders">Orders</a>
+            <a class="admin-section-block col-3" href="/Admin/Galerie/Post">Galerie</a class="admin-section-block col-3">
+            <a class="admin-section-block col-3" href="/Admin/Shop/Post">Shop</a class="admin-section-block col-3">
+            <a class="admin-section-block col-3" href="/Admin/Blog/Post">Blog</a class="admin-section-block col-3">
+            <a class="admin-section-block col-3" href="/Admin/Front">Home</a class="admin-section-block col-3">
+        </div>
+    </div>
 </div>
   
 <% include ../partials/footer %>
