--- a/public/style.css
+++ b/public/style.css
@@ -76,6 +76,17 @@
   background: transparent; /* Optional: just make scrollbar invisible */
 }
 
+input[type=checkbox]
+{
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  padding: 10px;
+}
+
 body,
 html {
   display: flex;
@@ -158,8 +169,8 @@ input:-webkit-autofill:focus {
 }
 
 .front-form {
-  border: 2px solid blue;
-  margin: 5px 0 5px 0;
+  border-bottom: 1px solid var(--light-shade-p1);
+  margin-bottom: 15px;
 }
 
 .lostpw-form {
@@ -799,8 +810,7 @@ button:focus {
   width: 100%;
   height: 50px;
   border: none;
-  background: linear-gradient(160deg, #c10539, #de3f71, #a7012f);
-  background-size: 200%;
+  background: var(--danger);
   color: #fff;
   outline: none;
   cursor: pointer;
@@ -808,7 +818,7 @@ button:focus {
 }
 
 .delbtn:hover {
-  background-position: right !important;
+  background: var(--danger-color);
 }
 
 .logbtn:hover {
@@ -1778,6 +1788,7 @@ tr:hover {
 
 #original,
 #print {
+  background-color: var(--brand-blue-p2);
   line-height: 0;
   -webkit-column-count: 3;
   -webkit-column-gap: 0px;
@@ -1841,8 +1852,7 @@ tr:hover {
 .card {
   border: none;
   border-radius: 0;
-  box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.5),
-    -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
+  box-shadow: 0px 0px 5px 0px rgb(20, 40, 55);
 }
 
 .card-body {
@@ -1885,6 +1895,47 @@ tr:hover {
   width: 100%;
 }
 /* END SINGLE SHOP */
+
+/* ADMIN */
+.admin-section-block {
+  display: block;
+  background: var(--brand-blue-p2);
+  color: var(--light-shade);
+  font-size: 36px;
+  padding: 40px 10px;
+  text-align: center;
+  margin: 15px;
+  text-decoration: none;
+  transition: ease-in-out 0.3s;
+}
+
+.admin-section-block:hover {
+  background-color: var(--light-shade-m1);
+  color: var(--interactive-color);
+  text-decoration: none;
+}
+
+.single-form-wrapper {
+
+}
+
+.single-form-wrapper .form-title {
+  color: var(--light-shade);
+  text-align: center;
+  font-weight: bold;
+}
+
+/* END ADMIN */
+
+
+
+
+
+
+
+
+
+
 
 /* Extra small devices (portrait phones, less than 576px)
  No media query for `xs` since this is the default in Bootstrap*/
