--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -17,7 +17,7 @@
         <div class="expandable-card" id="<%= locals.galleries[index]._id %>">
           <div class="face face1 blog-overlay-wrapper mt-0">
             <a href="#expand">
-              <img onclick="expand(this);" src="/api/image/<%= locals.galleries[index].mainImgId %>" class="card-img-top" alt="<%= locals.galleries[index].title %>">
+              <img onclick="expand(this);" src="/api/image/<%= locals.galleries[index].mainImgId %>" class="w-100" alt="<%= locals.galleries[index].title %>">
             </a>
             <div class="blog-overlay">
               <h4 class="card-title"><i><a href="/Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].shorttitle %></a></i></h4>
