--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -1,23 +1,27 @@
 <% include ../partials/head %>
 
-<div class="container">
-    <div class="form-container blog-form">
-        <form id="blog" method="POST" action="/api/blog/patch/<%= locals.blogContent.id %>" enctype="multipart/form-data">
-            <h1 class="form-title">Editer un post de blog</h1>
-            <div class="txtb">
-                <input id="title" type="text" name="title" value="<%= locals.blogContent.title %>" onkeyup="Validate.String(this, 4, 256);" required>
-                <span data-placeholder="Title"></span>
-                <span id="i_title" class="form-info">Title must contain between 4 and 256 characters</span>
+<div class="container container-single"> 
+    <div class="single-wrapper single-form-wrapper col-8 offset-2">
+        <h1 class="form-title">Modifier un ticket de blog</h1>
+        <form class="col-8 offset-2" method="POST" action="/api/blog/patch/<%= locals.blogContent.id %>" enctype="multipart/form-data">
+            <hr />
+            <div class="form-group">
+                <label class="control-label">Titre</label>
+                <input class="form-control" type="text" name="title" id="title" placeholder="Titre" value="<%= locals.blogContent.title %>" onkeyup="Validate.String(this, 1, 256);" required>
+                <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
             </div>
 
-            <textarea id="content" class="blog-textarea" name="content" placeholder="Your blog content here" onkeyup="Validate.String(this, 128, 4096);" required><%= locals.blogContent.content %></textarea>
-            <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
+            <div class="form-group">
+                <label class="control-label">Description</label>
+                <textarea class="instructions-textarea" id="content" name="content" placeholder="Description de l'oeuvre.." onkeyup="Validate.String(this, 128, 4096);" required><%= locals.blogContent.content %></textarea>
+                <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>  
+            </div>
 
             <div class="form-group">
                 <input type="file" name="img" id="img">
                 <% if (locals.img) { %>
                     <% locals.img.forEach(function (item) { %>
-                        <img id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
+                        <img class="w-100" id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
                         <div id="actDiv<%= item._id %>" class="action-div">
                             <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="http://localhost:8089/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
                             <a id="sel<%= item._id %>" class="select-main" onclick="setMain(event, this);" href="http://localhost:8089/api/image/select/Blog/<%= locals.blogContent.id %>/<%= item._id %>" <% if (item.isMain === true) { %>style="display:none"<% } %>><i class="fas fa-star"></i></a>
@@ -26,11 +30,10 @@
                 <% } %>
             </div>
 
-            <input type="submit" class="logbtn" value="Update" id="submit-blog">
+            <input type="submit" class="logbtn" value="Mettre à jour" id="submit-blog">
         </form>
-        <hr />
-        <form method="GET" action="/api/blog/delete/<%= locals.blogContent.id %>">
-            <input type="submit" class="delbtn" value="DELETE" id="delete-blog">
+        <form class="col-8 offset-2 mt-4" method="GET" action="/api/blog/delete/<%= locals.blogContent.id %>">
+            <input type="submit" class="delbtn" value="SUPPRIMER DEFINITIVEMENT" id="delete-blog">
         </form>
     </div>
     <script src="/scripts/blog/blogScripts.js"></script>
