--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -1,24 +1,27 @@
 <% include ../partials/head %>
 
-<div class="container"> 
-    <div class="form-container blog-form">
-        <form id="blog" method="POST" action="/api/blog/" enctype="multipart/form-data">
-            <h1 class="form-title">Rédiger un post de blog</h1>
-                
-            <div class="txtb">
-                <input id="title" type="text" name="title" onkeyup="Validate.String(this, 4, 256);" value="<% if (locals.formData) { %><%= locals.formData.title %><% } %>" required>
-                <span data-placeholder="Title"></span>
+<div class="container container-single"> 
+    <div class="single-wrapper single-form-wrapper col-8 offset-2">
+        <h1 class="form-title">Rédiger un post de blog</h1>
+        <form class="col-8 offset-2" id="blog" method="POST" action="/api/blog/" enctype="multipart/form-data">
+            <hr /> 
+            <div class="form-group">
+                <label class="control-label">Titre</label>
+                <input class="form-control" id="title" type="text" placeholder="Titre" name="title" onkeyup="Validate.String(this, 4, 256);" value="<% if (locals.formData) { %><%= locals.formData.title %><% } %>" required>
                 <span id="i_title" class="form-info">Title must contain between 4 and 256 characters</span>
             </div>
 
-            <textarea id="content" class="blog-textarea" name="content" placeholder="Your blog content here" onkeyup="Validate.String(this, 128, 4096);" required><% if (locals.formData) { %><%= locals.formData.content %><% } %></textarea>
-            <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
+            <div class="form-group">
+                <label class="control-label">Contenu</label>
+                <textarea id="content" class="instructions-textarea" name="content" placeholder="Le contenu de votre ticket de blog..." onkeyup="Validate.String(this, 128, 4096);" required><% if (locals.formData) { %><%= locals.formData.content %><% } %></textarea>
+                <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
+            </div>
 
             <div class="form-group">
                 <input type="file" name="img" id="img">
             </div>
 
-            <input type="submit" class="logbtn" value="Save" id="submit-blog">
+            <input type="submit" class="logbtn" value="Valider" id="submit-blog">
         </form>
     </div>
     <script src="/scripts/frontValidation.js"></script>
