--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -2,30 +2,34 @@
 
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 
-<div class="container"> 
-    <div class="form-container gallery-form">
-        <form id="gallery" method="POST" action="/api/gallery/post" enctype="multipart/form-data" onsubmit="postGallery(event);">
-            <h1 class="form-title">Ajouter un item à la galerie</h1>
-                
-            <div class="txtb">
-                <input type="text" name="title" id="title" onkeyup="Validate.String(this, 1, 256);" required>
-                <span data-placeholder="Title"></span>
+<div class="container container-single"> 
+    <div class="single-wrapper single-form-wrapper col-8 offset-2">
+        <h1 class="form-title">Ajouter une image à la galerie</h1>
+        <form class="col-8 offset-2" id="gallery" method="POST" action="/api/gallery/post" enctype="multipart/form-data" onsubmit="postGallery(event);">
+            <hr /> 
+            <div class="form-group">
+                <label class="control-label">Titre</label>
+                <input class="form-control" type="text" name="title" id="title" placeholder="Titre" onkeyup="Validate.String(this, 1, 256);" required>
                 <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
             </div>
 
-            <textarea class="blog-textarea" id="content" name="content" placeholder="Item description.." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
-            <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>  
-        
+            <div class="form-group">
+                <label class="control-label">Description</label>
+                <textarea class="instructions-textarea" id="content" name="content" placeholder="Description de l'oeuvre.." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
+                <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>  
+            </div>
+
             <div class="form-group">
                 <input type="file" name="img" id="img" multiple required>
             </div>
 
             <div class="form-group">
+                <label class="control-label">Tags</label>
                 <input v-bind="selectedTags" type="text" value="" data-role="tagsinput" id="tagInput" class="form-control">
                 <span data-placeholder="Tags"></span>
             </div>
 
-            <input type="submit" class="logbtn" value="Save" id="submit-gallery">
+            <input type="submit" class="logbtn" value="Valider" id="submit-gallery">
         </form>
     </div>
     
