--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -1,23 +1,37 @@
 <% include ../partials/head %>
 
-<div class="container">
-    <div class="form-container gallery-form">
-        <form id="shop" method="POST" action="/api/shop/patch/<%= locals.shop._id %>" enctype="multipart/form-data" onsubmit="patchShop(event, '<%= locals.shop._id %>');"> 
-            <h1 class="form-title">Editer un item de la boutique</h1>
-            <div class="txtb">
-                <input type="text" name="title" id="title" value="<%= locals.shop.title %>" onkeyup="Validate.String(this, 1, 256);" required>
-                <span data-placeholder="Title"></span>
+<div class="container container-single"> 
+    <div class="single-wrapper single-form-wrapper col-8 offset-2">
+        <h1 class="form-title">Modifier un item de la boutique</h1>
+        <form class="col-8 offset-2" id="shop" method="POST" action="/api/shop/patch/<%= locals.shop._id %>" enctype="multipart/form-data" onsubmit="patchShop(event, '<%= locals.shop._id %>');"> 
+            <hr />
+            <div class="form-group">
+                <label class="control-label">Titre</label>
+                <input class="form-control" type="text" name="title" id="title" placeholder="Titre" value="<%= locals.shop.title %>" onkeyup="Validate.String(this, 1, 256);" required>
                 <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
             </div>
             
-            <textarea id="content" name="content" class="blog-textarea" placeholder="Your item description here" onkeyup="Validate.String(this, 1, 2048);" required><%= locals.shop.content %></textarea>
-            <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
+            <div class="form-group">
+                <label class="control-label">Description</label>
+                <textarea class="instructions-textarea" id="content" name="content" class="blog-textarea" placeholder="Your item description here" onkeyup="Validate.String(this, 1, 2048);" required><%= locals.shop.content %></textarea>
+                <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label">Prix</label>
+                <input placeholder="35.50 (au centième d'euro près)" class="form-control" type="number" min="1" id="price" name="price" value="<%= locals.shop.price %>" step=".01" required>
+            </div>
+
+            <div class="form-group text-center">
+                <label class="control-label">Cochez si l'exemplaire est unique</label><br />
+                <input type="checkbox" name="isUnique" id="isUnique" <% if (locals.shop.isUnique) { %> checked <% } %>>
+            </div>
 
             <div class="form-group">
                 <input type="file" name="img" id="img" multiple>
                 <% if (locals.img) { %>
                     <% locals.img.forEach(function (item) { %>
-                        <img id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
+                        <img class="w-100 m-1" id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
                         <div id="actDiv<%= item._id %>" class="action-div" <% if (item.isMain === true) { %>style="display:none"<% } %>>
                             <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="http://localhost:8089/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
                             <a id="sel<%= item._id %>" onclick="setMain(event, this);" href="http://localhost:8089/api/image/select/Shop/<%= locals.shop._id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
@@ -25,22 +39,12 @@
                     <% }) %>
                 <% } %>
             </div>
-            
-            <div class="form-group">
-                <label>price</label>
-                <input type="number" min="1" id="price" name="price" value="<%= locals.shop.price %>" step=".01" required>
-            </div>
-            <div class="form-group">
-                <label>check if this is an unique item</label>
-                <input type="checkbox" name="isUnique" id="isUnique" <% if (locals.shop.isUnique) { %> checked <% } %>>
-            </div>
         
-            <input type="submit" class="logbtn" value="Update" id="submit-shop">
+            <input type="submit" class="logbtn" value="Mettre à jour" id="submit-shop">
         </form>
-    <hr />
-    <form method="GET" action="/api/shop/delete/<%= locals.shop._id %>">
-        <input type="submit" class="delbtn" value="DELETE" id="delete-blog">
-    </form>
+        <form class="col-8 offset-2 mt-4" method="GET" action="/api/shop/delete/<%= locals.shop._id %>">
+            <input type="submit" class="delbtn" value="SUPPRIMER DEFINITIVEMENT" id="delete-shop">
+        </form>
 </div>
 
     <script src="/scripts/shop/shopScripts.js"></script>
