--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -1,33 +1,37 @@
 <% include ../partials/head %>
 
-<div class="container"> 
-    <div class="form-container gallery-form">
-        <form id="shop" method="POST" action="/api/shop/post" enctype="multipart/form-data" onsubmit="postShop(event);">
-            <h1 class="form-title">Ajouter un item à la boutique</h1>
-                
-            <div class="txtb">
-                <input type="text" name="title" id="title" onkeyup="Validate.String(this, 1, 256);" required>
-                <span data-placeholder="Title"></span>
+<div class="container container-single"> 
+    <div class="single-wrapper single-form-wrapper col-8 offset-2">
+        <h1 class="form-title">Ajouter un item à la boutique</h1>
+        <form class="col-8 offset-2" id="shop" method="POST" action="/api/shop/post" enctype="multipart/form-data" onsubmit="postShop(event);">
+            <hr /> 
+            <div class="form-group">
+                <label class="control-label">Titre</label>
+                <input class="form-control" type="text" name="title" id="title" placeholder="Titre" onkeyup="Validate.String(this, 1, 256);" required>
                 <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
             </div>
 
-            <textarea class="blog-textarea" id="content" name="content" placeholder="Item description.." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
-            <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>  
-        
             <div class="form-group">
-                <input type="file" name="img" id="img" multiple required>
+                <label class="control-label">Description</label>
+                <textarea class="instructions-textarea" id="content" name="content" placeholder="Description de l'item..." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
+                <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>  
+            </div>
+
+            <div class="form-group">
+                <label class="control-label">Prix</label>
+                <input placeholder="35.50 (au centième d'euro près)" class="form-control" type="number" min="1" id="price" name="price" step=".01" required>
             </div>
             
-            <div class="form-group">
-                <label>price</label>
-                <input type="number" min="1" id="price" name="price" step=".01" required>
-            </div>
-            <div class="form-group">
-                <label>check if this is an unique item</label>
+            <div class="form-group text-center">
+                <label class="control-label">Cochez si l'exemplaire est unique</label><br />
                 <input type="checkbox" name="isUnique" id="isUnique">
             </div>
 
-            <input type="submit" class="logbtn" value="Save" id="submit-shop">
+            <div class="form-group">
+                <input type="file" name="img" id="img" multiple required>
+            </div>
+
+            <input type="submit" class="logbtn" value="Valider" id="submit-shop">
         </form>
     </div>
     
