--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -18,7 +18,10 @@
             </div>
 
             <div class="form-group">
-                <input type="file" name="img" id="img">
+                <div class="form-group text-center">
+                    <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
+                    <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)">
+                </div>
                 <% if (locals.img) { %>
                     <% locals.img.forEach(function (item) { %>
                         <img class="w-100" id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
@@ -36,6 +39,15 @@
             <input type="submit" class="delbtn" value="SUPPRIMER DEFINITIVEMENT" id="delete-blog">
         </form>
     </div>
+    <script>
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            $("#imglabel").addClass("imguploaded");
+        } else {
+            $("#imglabel").removeClass("imguploaded");
+        }
+    }
+    </script>
     <script src="/scripts/blog/blogScripts.js"></script>
     <script src="/scripts/frontValidation.js"></script>
     <script src="/scripts/formFocus.js"></script>
