--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -17,13 +17,23 @@
                 <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
             </div>
 
-            <div class="form-group">
-                <input type="file" name="img" id="img">
+            <div class="form-group text-center">
+                <label for="img" id="imglabel" class="filebtn">Choisir une image</label>
+                <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)">
             </div>
 
             <input type="submit" class="logbtn" value="Valider" id="submit-blog">
         </form>
     </div>
+    <script>
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            $("#imglabel").addClass("imguploaded");
+        } else {
+            $("#imglabel").removeClass("imguploaded");
+        }
+    }
+    </script>
     <script src="/scripts/frontValidation.js"></script>
     <script src="/scripts/formFocus.js"></script>
 </div>
