--- a/views/restricted/Gallery-patch.ejs
+++ b/views/restricted/Gallery-patch.ejs
@@ -20,7 +20,10 @@
             </div>
 
             <div class="form-group">
-                <input type="file" name="img" id="img" multiple>
+                <div class="form-group text-center">
+                    <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
+                    <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple>
+                </div>
                 <% if (locals.img) { %>
                     <% locals.img.forEach(function (item) { %>
                         <img class="w-100" id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
@@ -46,6 +49,14 @@
 </div>
 
     <script>
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                $("#imglabel").addClass("imguploaded");
+            } else {
+                $("#imglabel").removeClass("imguploaded");
+            }
+        }       
+
         let tagInput = $("#tagInput");
         let tags = "<%= locals.gallery.tags %>";
         tags = tags.split(',')
