--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -19,8 +19,9 @@
                 <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>  
             </div>
 
-            <div class="form-group">
-                <input type="file" name="img" id="img" multiple required>
+            <div class="form-group text-center">
+                <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
+                <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple required>
             </div>
 
             <div class="form-group">
@@ -32,10 +33,20 @@
             <input type="submit" class="logbtn" value="Valider" id="submit-gallery">
         </form>
     </div>
+
     
-    <script src="/scripts/gallery/galleryScripts.js"></script>
-    <script src="/scripts/frontValidation.js"></script>
-    <script src="/scripts/formFocus.js"></script>
+<script>
+    function readURL(input) {
+    if (input.files && input.files[0]) {
+        $("#imglabel").addClass("imguploaded");
+    } else {
+        $("#imglabel").removeClass("imguploaded");
+    }
+}
+</script>
+<script src="/scripts/gallery/galleryScripts.js"></script>
+<script src="/scripts/frontValidation.js"></script>
+<script src="/scripts/formFocus.js"></script>
 </div>
   
 <% include ../partials/footer %>
