--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -28,7 +28,10 @@
             </div>
 
             <div class="form-group">
-                <input type="file" name="img" id="img" multiple>
+                <div class="form-group text-center">
+                    <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
+                    <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple>
+                </div>
                 <% if (locals.img) { %>
                     <% locals.img.forEach(function (item) { %>
                         <img class="w-100 m-1" id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
@@ -47,9 +50,18 @@
         </form>
 </div>
 
-    <script src="/scripts/shop/shopScripts.js"></script>
-    <script src="/scripts/frontValidation.js"></script>
-    <script src="/scripts/formFocus.js"></script>
+<script>
+function readURL(input) {
+    if (input.files && input.files[0]) {
+        $("#imglabel").addClass("imguploaded");
+    } else {
+        $("#imglabel").removeClass("imguploaded");
+    }
+}
+</script>
+<script src="/scripts/shop/shopScripts.js"></script>
+<script src="/scripts/frontValidation.js"></script>
+<script src="/scripts/formFocus.js"></script>
 </div>
   
 <% include ../partials/footer %>
