--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -27,17 +27,27 @@
                 <input type="checkbox" name="isUnique" id="isUnique">
             </div>
 
-            <div class="form-group">
-                <input type="file" name="img" id="img" multiple required>
+            <div class="form-group text-center">
+                <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
+                <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple required>
             </div>
 
             <input type="submit" class="logbtn" value="Valider" id="submit-shop">
         </form>
     </div>
     
-    <script src="/scripts/shop/shopScripts.js"></script>
-    <script src="/scripts/frontValidation.js"></script>
-    <script src="/scripts/formFocus.js"></script>
+<script>
+function readURL(input) {
+    if (input.files && input.files[0]) {
+        $("#imglabel").addClass("imguploaded");
+    } else {
+        $("#imglabel").removeClass("imguploaded");
+    }
+}
+</script>
+<script src="/scripts/shop/shopScripts.js"></script>
+<script src="/scripts/frontValidation.js"></script>
+<script src="/scripts/formFocus.js"></script>
 </div>
   
 <% include ../partials/footer %>
